syntax = "proto3";

package configure_resource;
option go_package = "./v1;v1";
import "validate/validate.proto";


message Resource{
  uint32 id = 1 ;
  string keyword = 2;
  string description = 3;
  string fields = 4;
  string tag = 5;
  bool private = 6;
  repeated uint32 servers = 7;
  uint32 created_at = 8;
  uint32 updated_at = 9;
}

message PageResourceRequest{
  uint32 page = 1[(validate.rules).uint32 = {gt: 0}];
  uint32 page_size = 2[(validate.rules).uint32 = {gt: 0,lte:50}];
  optional uint32 server_id = 3;
  optional string keyword = 4;
  optional string tag = 5;
}

message PageResourceReply {
  uint32 total = 1;
  repeated Resource list = 2;
}

message AddResourceRequest {
  string keyword = 1[(validate.rules).string = {min_len: 1, max_len: 32}];
  string description = 2[(validate.rules).string = {min_len: 1, max_len: 128}];
  string tag = 3[(validate.rules).string = {min_len: 1, max_len: 32}];
  string fields = 4;
  optional bool private = 5;
  repeated uint32 servers = 6;
}

message AddResourceReply{
  uint32 id = 1;
}

message UpdateResourceRequest {
  uint32 id = 1 [(validate.rules).uint32 = {gt: 0}];
  string description = 2[(validate.rules).string = {min_len: 1, max_len: 128}];
  string tag = 3[(validate.rules).string = {min_len: 1, max_len: 32}];
  string fields = 4;
  optional bool private = 5;
  repeated uint32 servers = 6;
}

message DeleteResourceRequest {
  uint32 id = 1 [(validate.rules).uint32 = {gt: 0}];
}

message GetResourceServerIdsRequest{
  uint32 resource_id = 1[(validate.rules).uint32.gt = 0];
}

message GetResourceServerIdsReply {
  repeated uint32 list = 1;
}

message GetResourceValuesRequest{
  uint32 resource_id = 1 [(validate.rules).uint32.gt = 0];
}

message GetResourceValuesReply {
  message ResourceValue{
    uint32 id = 1;
    uint32 env_id = 2;
    uint32 resource_id = 3;
    string value = 4;
    uint32 created_at = 5;
  }
  repeated ResourceValue list = 1;
}

message UpdateResourceValuesRequest {
  message ResourceValue{
    uint32 env_id = 1[(validate.rules).uint32 = {gt: 0}];
    string value = 2[(validate.rules).string = {min_len: 7}];
  }
  uint32 resource_id = 1 [(validate.rules).uint32 = {gt: 0}];
  repeated ResourceValue list = 2;
}

